# speed-up-python-with-carma

./: .gitignore  README.md
gibbs_sampler_library/: CMakeLists.txt
gibbs_sampler_library/cpp/: CMakeLists.txt
gibbs_sampler_library/cpp/include/: simple_gibbs
gibbs_sampler_library/cpp/include/simple_gibbs_bits/: gibbs_sampler.hpp
gibbs_sampler_library/cpp/src/: gibbs_sampler.cpp
gibbs_sampler_library/cpp/tests/: CMakeLists.txt
gibbs_sampler_library/cpp/tests/src/: test.cpp
gibbs_sampler_library/python/: gibbs_sampler.cpp  simple_gibbs.cpp
gibbs_sampler_library/python/carma/: carma.h  utils.h
python_only/: fig.graffle  gibbs_sampler.py  simple_gibbs_python.py  test.py
python_using_cpp/: test.py
